--- a/index.html
+++ b/index.html
@@ -1,98 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-  </head>
-  <body>
-    <div class="container clearfix">
-      <section class="header-block">
-        <div class="header-top">
-          <div class="logo-block">
-            <a href="index.html">
-              <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="56" class="logo">
-                <path d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z"
+<head>
+<meta charset="UTF-8" />
+<title>Document</title>
+<link rel="stylesheet" href="css/normalize.css" />
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/font-awesome.min.css" />
+</head>
+<body class="container clearfix">
+<section class="header-block">
+<div class="header-top">
+<div class="logo-block">
+<a href="index.html">
+<svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="56" class="logo">
+<path d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z"
                 /> </svg>
-            </a>
-            <a href="index.html"><span class="logo-txt">Waxom</span></a>
-          </div>
-          <nav class="menu">
-            <ul class="menu-ul">
-              <li class="menu-ul-li"><a href="#" class="menu-link">Home</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">About Us</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Portfolio</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Features</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Blog</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Pricing</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Shortcodes</a></li>
-              <li class="menu-ul-li"><a href="#" class="menu-link">Contact</a></li>
-            </ul>
-          </nav>
+</a>
+<a href="index.html"><span class="logo-txt">Waxom</span></a>
+</div>
+<nav>
+<ul class="menu menu-ul">
+<li class="menu-ul-li"><a href="#" class="menu-link">Home</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">About Us</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Portfolio</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Features</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Blog</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Pricing</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Shortcodes</a></li>
+<li class="menu-ul-li"><a href="#" class="menu-link">Contact</a></li>
+</ul>
 
-          <a href="#" class="button-cart">
-            <svg  xmlns="http://www.w3.org/2000/svg"
+<button class="button-cart">
+<a href="#">
+<svg  xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" width="18"  height="24">
-              <path d="M14.995,2.999 L13.496,2.999 C13.496,1.342 11.483,-0.002 8.999,-0.002 C6.514,-0.002 4.501,1.342 4.501,2.999 L3.002,2.999 C1.346,2.999 0.003,4.341 0.003,5.997 L0.003,20.995 C0.003,22.651 1.346,23.994 3.002,23.994 L14.995,23.994 C16.652,23.994 17.994,22.651 17.994,20.995 L17.994,5.997 C17.994,4.341 16.652,2.999 14.995,2.999 ZM8.999,1.498 C10.655,1.498 11.997,1.962 11.997,2.999 L6.000,2.999 C6.000,1.962 7.343,1.498 8.999,1.498 ZM16.495,20.995 C16.495,21.823 15.824,22.494 14.995,22.494 L3.002,22.494 C2.174,22.494 1.502,21.823 1.502,20.995 L1.502,19.495 L16.495,19.495 L16.495,20.995 ZM16.495,17.995 L1.502,17.995 L1.502,5.997 C1.502,5.169 2.174,4.497 3.002,4.497 L4.501,4.497 L4.501,8.998 L6.000,8.998 L6.000,4.497 L11.997,4.497 L11.997,8.998 L13.496,8.998 L13.496,4.497 L14.995,4.497 C15.824,4.497 16.495,5.169 16.495,5.997 L16.495,17.995 Z"
+<path d="M14.995,2.999 L13.496,2.999 C13.496,1.342 11.483,-0.002 8.999,-0.002 C6.514,-0.002 4.501,1.342 4.501,2.999 L3.002,2.999 C1.346,2.999 0.003,4.341 0.003,5.997 L0.003,20.995 C0.003,22.651 1.346,23.994 3.002,23.994 L14.995,23.994 C16.652,23.994 17.994,22.651 17.994,20.995 L17.994,5.997 C17.994,4.341 16.652,2.999 14.995,2.999 ZM8.999,1.498 C10.655,1.498 11.997,1.962 11.997,2.999 L6.000,2.999 C6.000,1.962 7.343,1.498 8.999,1.498 ZM16.495,20.995 C16.495,21.823 15.824,22.494 14.995,22.494 L3.002,22.494 C2.174,22.494 1.502,21.823 1.502,20.995 L1.502,19.495 L16.495,19.495 L16.495,20.995 ZM16.495,17.995 L1.502,17.995 L1.502,5.997 C1.502,5.169 2.174,4.497 3.002,4.497 L4.501,4.497 L4.501,8.998 L6.000,8.998 L6.000,4.497 L11.997,4.497 L11.997,8.998 L13.496,8.998 L13.496,4.497 L14.995,4.497 C15.824,4.497 16.495,5.169 16.495,5.997 L16.495,17.995 Z"
               />
-            </svg>
-          </a>
-          <form action="search" class="search-form">
-            <input class="search-form-input" id="search" type="search" />
-            <label for="search">
-              <svg class="search-form-img"  xmlns="http://www.w3.org/2000/svg"  xmlns:xlink="http://www.w3.org/1999/xlink"  width="24" height="24">
-                <path d="M23.762,22.681 L17.569,16.586 C19.190,14.825 20.187,12.494 20.187,9.929 C20.186,4.443 15.668,-0.002 10.093,-0.002 C4.519,-0.002 0.001,4.443 0.001,9.929 C0.001,15.416 4.519,19.862 10.093,19.862 C12.502,19.862 14.711,19.028 16.446,17.644 L22.663,23.763 C22.966,24.062 23.458,24.062 23.761,23.763 C24.065,23.464 24.065,22.979 23.762,22.681 ZM10.093,18.334 C5.377,18.334 1.553,14.572 1.553,9.929 C1.553,5.288 5.377,1.525 10.093,1.525 C14.810,1.525 18.633,5.288 18.633,9.929 C18.633,14.572 14.810,18.334 10.093,18.334 Z"
+</svg>
+</a>
+</button>
+<form action="search" class="search-form">
+<input class="search-form-input" id="search" type="search" />
+<label for="search">
+<svg class="search-form-img"  xmlns="http://www.w3.org/2000/svg"  xmlns:xlink="http://www.w3.org/1999/xlink"  width="24" height="24">
+<path d="M23.762,22.681 L17.569,16.586 C19.190,14.825 20.187,12.494 20.187,9.929 C20.186,4.443 15.668,-0.002 10.093,-0.002 C4.519,-0.002 0.001,4.443 0.001,9.929 C0.001,15.416 4.519,19.862 10.093,19.862 C12.502,19.862 14.711,19.028 16.446,17.644 L22.663,23.763 C22.966,24.062 23.458,24.062 23.761,23.763 C24.065,23.464 24.065,22.979 23.762,22.681 ZM10.093,18.334 C5.377,18.334 1.553,14.572 1.553,9.929 C1.553,5.288 5.377,1.525 10.093,1.525 C14.810,1.525 18.633,5.288 18.633,9.929 C18.633,14.572 14.810,18.334 10.093,18.334 Z"
                 />
-              </svg>
-            </label>
-          </form>
-        </div>
-        <section class="header-carousel">
-          <a href="#" class="carousel-lr carousel-left">
-            <svg
+</svg>
+</label>
+</form>
+</nav>
+</div>
+<section class="header-carousel">
+<a href="#" class="carousel-lr carousel-left">
+<svg
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               width="40"
               height="73"
             >
-              <path
+<path
                 d="M38.026,72.979 L0.005,36.498 L38.026,0.018 L39.995,2.022 L4.066,36.498 L39.995,70.977 L38.026,72.979 Z"
               />
-            </svg>
-          </a>
-          <div class="carousel-txt">
-            <span class="carousel-h2">Unique and Modern Design</span>
-            <span class="carousel-h1">Portfolio PSD Template</span>
-            <p class="carousel-txt-p">
-              Nam liber tempor cum soluta nobis eleifend option congue nihil
-              imperdiet doming id quod mazim placerat facer possim assum.
-            </p>
-            <a href="#" class="carousel-btn-txt">Get Started</a>
-            
-          </div>
-          <a href="#" class="carousel-lr carousel-right">
-            <svg
+</svg>
+</a>
+<div class="carousel-txt">
+<span class="carousel-h2">Unique and Modern Design</span>
+<span class="carousel-h1">Portfolio PSD Template</span>
+<p class="carousel-txt-p">
+Nam liber tempor cum soluta nobis eleifend option congue nihil
+imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
+</p>
+<a href="#" class="carousel-btn-txt">Get Started</a>
+
+</div>
+<a href="#" class="carousel-lr carousel-right">
+<svg
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               width="40"
               height="73"
             >
-              <path
+<path
                 d="M1.974,72.979 L39.995,36.498 L1.974,0.018 L0.005,2.022 L35.934,36.498 L0.005,70.977 L1.974,72.979 Z"
               />
-            </svg>
-          </a>
-        </section>
-        <div class="pagination">
-         <a class="pagination-img" href="#"></a>
-         <a class="pagination-img" href="#"></a>
-         <a class="pagination-img" href="#"></a>
-         <a class="pagination-img" href="#"></a>
-         <a class="pagination-img" href="#"></a>
-       </div>
-      </section>
-    </div>
-  </body>
+</svg>
+</a>
+</section>
+<div class="pagination">
+<a class="pagination-img" href="#"></a>
+<a class="pagination-img" href="#"></a>
+<a class="pagination-img" href="#"></a>
+<a class="pagination-img" href="#"></a>
+<a class="pagination-img" href="#"></a>
+</div>
+</section>
+<main>
+
+
+
+</main>
+</body>
 </html>
