--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@ imperdiet doming id&nbsp;quod mazim placerat facer possim assum.
 </div>
 </section>
 <main>
-
-
-
+<section class="options">
+  <div class="options-block"></div>
+  <div class="options-block"></div>
+  <div class="options-block"></div>
+  <div class="options-block"></div>
+</section>
 </main>
 </body>
 </html>
