готовый шаблон без адаптации

--- a/index.html
+++ b/index.html
@@ -747,13 +747,13 @@
             </div>
          </section>
          <section class="partners">
-            <a href="#"><img src="img/partners-photo1.png" alt="partners-photo" width="210" class="partners-img">
+            <a href="#" target="blank"><img src="img/partners-photo1.png" alt="partners-photo" width="210" class="partners-img">
             </a>
-            <a href="#"><img src="img/partners-photo2.png" alt="partners-photo" width="210" class="partners-img">
+            <a href="#" target="blank"><img src="img/partners-photo2.png" alt="partners-photo" width="210" class="partners-img">
             </a>
-            <a href="#"><img src="img/partners-photo3.png" alt="partners-photo" width="210" class="partners-img">
+            <a href="#" target="blank"><img src="img/partners-photo3.png" alt="partners-photo" width="210" class="partners-img">
             </a>
-            <a href="#"><img src="img/partners-photo4.png" alt="partners-photo" width="210" class="partners-img">
+            <a href="#" target="blank"><img src="img/partners-photo4.png" alt="partners-photo" width="210" class="partners-img">
             </a>
          </section>
       </main>
@@ -822,7 +822,18 @@
                </div>
             </div>
          </section>
-         <section class="footer2"></section>
+         <section class="footer2">
+            <div class="copyright-left">
+               <span class="copy">Copyright &copy;&nbsp;2015 <a href="#" class="footer2-link">Waxom</a> </span>
+               <a href="#" class="footer2-link policy">Privacy Policy</a>
+               <a href="#" class="footer2-link faq">FAQ</a>
+               <a href="#" class="footer2-link support">Support</a>
+            </div>
+            <div class="copyright-right">
+               <span class="designed">Designed by&nbsp;<a href="#" class="footer2-link">ThemeFire</a></span>
+               <span class="only">Only on&nbsp;<a href="#" class="footer2-link">Envato Market</a></span>
+            </div>
+         </section>
       </footer>
    </body>
 </html>
