--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <title>Document</title>
       <link rel="stylesheet" href="css/normalize.css" />
       <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="css/mob-style.css" />
+      <link rel="stylesheet" href="css/mob2-style.css" />
       <link rel="stylesheet" href="css/font-awesome.min.css" />
    </head>
    <body class="container clearfix">
