начал моб версию

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                </a>
             </div>
             <nav>
+
+               <!--меню для моб.-->
+               <input type="checkbox" id="checkbox" class="mobile-menu__checkbox">
+               <label for="checkbox" class="mobile-menu__btn"><div class="mobile-menu__icon"></div></label>
+
+
                <ul class="menu menu-ul">
                   <li class="menu-ul-li"><a href="#" class="menu-link">Home</a></li>
                   <li class="menu-ul-li">
