--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="css/media-1024.css" />
       <link rel="stylesheet" href="css/media-768.css" />
       <link rel="stylesheet" href="css/media-576.css" />
+      <link rel="stylesheet" href="css/media-420.css" />
       <link rel="stylesheet" href="css/font-awesome.min.css" />
    </head>
    <body class="container clearfix">
